--- a/WebApplication33/Exercise2/Menu2.html
+++ b/WebApplication33/Exercise2/Menu2.html
@@ -2,13 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Menu2</title>
-    <link href="MenuPage.css" rel="stylesheet" />
+    <link href="Styles/style.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="burgersPlace"></div><!-- Lägg till 7st programatiskt-->
-    <div id="subsPlace"></div><!-- Lägg till 7st programatiskt-->
-    <div id="pizzaPlace"></div><!-- Lägg till 7st programatiskt-->
-    <div id="drinksPlace"></div>  <!-- Lägg till 7st programatiskt-->
+    <!-- Lägg till 7st programatiskt-->
+    <div id="burgersPlace">
+        <!--<article>
+            <fieldset>
+                <legend>Monday Burger</legend>
+                <h3>Pepper burger</h3>
+                <span>No image loaded</span>
+                <div class="price" id="monday">19.90</div>
+            </fieldset>
+        </article>-->
+    </div>
+    <div id="subsPlace"></div>
+    <div id="pizzaPlace"></div>
+    <div id="drinksPlace"></div>
 </body>
 </html>
 <script src="MenuPage2.js"></script>
