Starting with the js file

--- a/WebApplication33/Exercise2/Menu2.html
+++ b/WebApplication33/Exercise2/Menu2.html
@@ -2,20 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Menu2</title>
-    <link href="Styles/style.css" rel="stylesheet" />
+    <link href="Styles/style.css" rel="stylesheet"/>
 </head>
 <body>
     <!-- Lägg till 7st programatiskt-->
-    <div id="burgersPlace">
-        <!--<article>
-            <fieldset>
-                <legend>Monday Burger</legend>
-                <h3>Pepper burger</h3>
-                <span>No image loaded</span>
-                <div class="price" id="monday">19.90</div>
-            </fieldset>
-        </article>-->
-    </div>
+    <div id="burgersPlace"></div>
     <div id="subsPlace"></div>
     <div id="pizzaPlace"></div>
     <div id="drinksPlace"></div>
