Played with some DOM properties in fixit.js

--- a/WebApplication33/Exercise2/FixIt.html
+++ b/WebApplication33/Exercise2/FixIt.html
@@ -14,7 +14,7 @@
 <p>
     Voki rovio disqus dogster kazaa imvu twitter sclipo odeo sclipo, blekko imvu weebly glogster imeem zinch wufoo voki geni, yoono kosmix zlio lanyrd hojoki divvyshot mog hojoki. Imvu klout plugg bitly chartly jibjab handango napster zanga prezi, plaxo sifteo yuntaa twitter zapier udemy ideeli palantir chegg, oooooc chumby hipmunk oooj revver odeo doostang bubbli. Movity elgg bebo wikia jajah movity flickr hulu, blekko whrrl hulu gooru zappos voxy. Zimbra loopt napster zillow palantir kno kazaa squidoo, zapier boxbe quora zoosk ifttt bubbli, airbnb nuvvo whrrl xobni vuvox movity.
 </p>
-<p>
+<p id="playDom">
     Palantir woopra elgg hojoki zinch airbnb mobly skype eduvant woopra tumblr yoono, dopplr zlio eskobo cuil elgg kno koofers voxy ebay blippy. Udemy unigo voxy waze squidoo plaxo yammer zooomr, yammer palantir groupon spotify gooru. Lala kno doostang unigo kazaa chegg oovoo wikia xobni dropio, odeo ideeli foodzie voki ideeli wesabe glogster. Woopra kiko orkut jabber spotify tumblr twitter blippy, ngmoco hipmunk heekya kaboodle hipmunk babblely ideeli, jumo jajah greplin klout kno lijit. Appjet chartly orkut reddit dopplr klout convore napster zimbra, twitter sclipo plugg mog wufoo xobni.
 </p>
 <p>
