--- a/WebApplication33/Exercise2/FixIt.html
+++ b/WebApplication33/Exercise2/FixIt.html
@@ -11,21 +11,29 @@
             Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo. Squidoo flickr elgg voxy cloudera elgg kosmix ning reddit zooomr loopt handango, rovio edmodo appjet ideeli meebo weebly zlio zimbra chumby jibjab. Woopra boxbe wesabe fleck gooru shopify kiko woopra vuvox weebly, lala foodzie plaxo zlio lanyrd groupon joyent. Disqus omgpop blekko disqus tumblr voki zynga lijit weebly ebay loopt hojoki, grockit doostang knewton wikia quora knewton kno diigo prezi shopify. Tumblr tivo sifteo geni bebo mog airbnb babblely vuvox zoodles, akismet wikia wufoo jajah dopplr zapier wesabe movity, empressr chartly cloudera whrrl sclipo dogster zappos foodzie.
         </p>
     </div>
-<p>
-    Voki rovio disqus dogster kazaa imvu twitter sclipo odeo sclipo, blekko imvu weebly glogster imeem zinch wufoo voki geni, yoono kosmix zlio lanyrd hojoki divvyshot mog hojoki. Imvu klout plugg bitly chartly jibjab handango napster zanga prezi, plaxo sifteo yuntaa twitter zapier udemy ideeli palantir chegg, oooooc chumby hipmunk oooj revver odeo doostang bubbli. Movity elgg bebo wikia jajah movity flickr hulu, blekko whrrl hulu gooru zappos voxy. Zimbra loopt napster zillow palantir kno kazaa squidoo, zapier boxbe quora zoosk ifttt bubbli, airbnb nuvvo whrrl xobni vuvox movity.
-</p>
-<p id="playDom">
-    Palantir woopra elgg hojoki zinch airbnb mobly skype eduvant woopra tumblr yoono, dopplr zlio eskobo cuil elgg kno koofers voxy ebay blippy. Udemy unigo voxy waze squidoo plaxo yammer zooomr, yammer palantir groupon spotify gooru. Lala kno doostang unigo kazaa chegg oovoo wikia xobni dropio, odeo ideeli foodzie voki ideeli wesabe glogster. Woopra kiko orkut jabber spotify tumblr twitter blippy, ngmoco hipmunk heekya kaboodle hipmunk babblely ideeli, jumo jajah greplin klout kno lijit. Appjet chartly orkut reddit dopplr klout convore napster zimbra, twitter sclipo plugg mog wufoo xobni.
-</p>
-<p>
-    Zoodles movity lijit zimbra jumo ebay xobni etsy elgg shopify, cloudera mog zoosk kno cotweet sifteo dopplr kno mozy airbnb, movity wakoopa joyent tivo heroku boxbe dropio kosmix. Fleck yammer mozy chartly omgpop eduvant blyve squidoo reddit, ideeli bubbli zanga chumby lala groupon udemy. Eduvant flickr odeo zoodles quora cotweet plaxo weebly, edmodo sifteo diigo nuvvo unigo imeem, heroku voxy zillow sclipo kazaa hojoki. Mobly plugg plickers heekya gsnap loopt sclipo tivo oooooc, voxy xobni grockit zimbra odeo yuntaa unigo plickers, octopart zlio lanyrd trulia greplin zlio imeem.
-</p>
-<p id="makeMeAnArray">
-    Whrrl klout diigo eskobo 4.562 zynga kippt nuvvo ideeli fleck, greplin vimeo unigo yuntaa diigo lijit reddit oooooc, ngmoco insala mozy cloudera wufoo weebly spock. Zappos zinch meebo cloudera airbnb woopra bitly cuil zooomr geni kippt woopra, elgg quora cuil mobly lala knewton revver zanga mzinga blyve ning, heekya vimeo quora yoono diigo orkut grockit joukuu heekya jibjab. Qeyno reddit mzinga blekko jaiku meevee zillow wufoo jaiku yammer, etsy wakoopa waze empressr fleck elgg jajah dropio waze, rovio wakoopa yammer oovoo movity zoodles gooru imvu. Whrrl jabber vuvox, greplin.
-</p>
-
-<div id="birthdayPresentation"></div>
-<div id="minutePresentation"></div>
+    <p>
+        Voki rovio disqus dogster kazaa imvu twitter sclipo odeo sclipo, blekko imvu weebly glogster imeem zinch wufoo voki geni, yoono kosmix zlio lanyrd hojoki divvyshot mog hojoki. Imvu klout plugg bitly chartly jibjab handango napster zanga prezi, plaxo sifteo yuntaa twitter zapier udemy ideeli palantir chegg, oooooc chumby hipmunk oooj revver odeo doostang bubbli. Movity elgg bebo wikia jajah movity flickr hulu, blekko whrrl hulu gooru zappos voxy. Zimbra loopt napster zillow palantir kno kazaa squidoo, zapier boxbe quora zoosk ifttt bubbli, airbnb nuvvo whrrl xobni vuvox movity.
+    </p>
+    <p id="playDom">
+        Palantir woopra elgg hojoki zinch airbnb mobly skype eduvant woopra tumblr yoono, dopplr zlio eskobo cuil elgg kno koofers voxy ebay blippy. Udemy unigo voxy waze squidoo plaxo yammer zooomr, yammer palantir groupon spotify gooru. Lala kno doostang unigo kazaa chegg oovoo wikia xobni dropio, odeo ideeli foodzie voki ideeli wesabe glogster. Woopra kiko orkut jabber spotify tumblr twitter blippy, ngmoco hipmunk heekya kaboodle hipmunk babblely ideeli, jumo jajah greplin klout kno lijit. Appjet chartly orkut reddit dopplr klout convore napster zimbra, twitter sclipo plugg mog wufoo xobni.
+    </p>
+    <p>
+        Zoodles movity lijit zimbra jumo ebay xobni etsy elgg shopify, cloudera mog zoosk kno cotweet sifteo dopplr kno mozy airbnb, movity wakoopa joyent tivo heroku boxbe dropio kosmix. Fleck yammer mozy chartly omgpop eduvant blyve squidoo reddit, ideeli bubbli zanga chumby lala groupon udemy. Eduvant flickr odeo zoodles quora cotweet plaxo weebly, edmodo sifteo diigo nuvvo unigo imeem, heroku voxy zillow sclipo kazaa hojoki. Mobly plugg plickers heekya gsnap loopt sclipo tivo oooooc, voxy xobni grockit zimbra odeo yuntaa unigo plickers, octopart zlio lanyrd trulia greplin zlio imeem.
+    </p>
+    <p id="makeMeAnArray">
+        Whrrl klout diigo eskobo 4.562 zynga kippt nuvvo ideeli fleck, greplin vimeo unigo yuntaa diigo lijit reddit oooooc, ngmoco insala mozy cloudera wufoo weebly spock. Zappos zinch meebo cloudera airbnb woopra bitly cuil zooomr geni kippt woopra, elgg quora cuil mobly lala knewton revver zanga mzinga blyve ning, heekya vimeo quora yoono diigo orkut grockit joukuu heekya jibjab. Qeyno reddit mzinga blekko jaiku meevee zillow wufoo jaiku yammer, etsy wakoopa waze empressr fleck elgg jajah dropio waze, rovio wakoopa yammer oovoo movity zoodles gooru imvu. Whrrl jabber vuvox, greplin.
+    </p>
+<div id="arrayDisplay">
+    <h2>Some calculations about my age</h2>
+    <div id="birthdayPresentation">
+        <h2>Days until my b-day</h2>
+        
+    </div>
+    <div id="minutePresentation">
+        <h2>Minutes old</h2>
+        
+    </div>
+</div>
 </body>
 </html>
 <script src="FixItPage.js"></script>
